[package]
name = "tikv_study"
version = "0.1.0"
edition = "2021"

[features]
failpoints = ["fail/failpoints"]

[dependencies]
byteorder = "1.2"
collections = { workspace = true }
error_code = { workspace = true }
fail = "0.5"
#grpcio = { workspace = true }
#grpcio-health = { workspace = true }
#kvproto = { workspace = true }
lazy_static = "1.3"
libc = "0.2"
#protobuf = { version = "2.8", features = ["bytes"] }
slog = { workspace = true }
slog-global = { workspace = true }
tikv_alloc = { workspace = true }
tikv_util = { workspace = true }

[patch.crates-io]
#raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
#raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
#protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
#protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }

[workspace]
members = [
  "components/collections",
  "components/error_code",
  "components/file_system",
  "components/tikv_alloc",
  "components/tikv_util",
]

[workspace.dependencies]
collections = { path = "components/collections" }
error_code = { path = "components/error_code" }
tikv_alloc = { path = "components/tikv_alloc" }
tikv_util = { path = "components/tikv_util" }
# External libs
#raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
#grpcio = { version = "0.10.4", default-features = false, features = ["openssl", "protobuf-codec", "nightly"] }
#grpcio-health = { version = "0.10.4", default-features = false, features = ["protobuf-codec"] }
#kvproto = { git = "https://github.com/pingcap/kvproto.git" }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
openssl = "0.10"
openssl-sys = "0.9"