[package]
name = "tikv_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collections ={ workspace = true }
lazy_static = "1.3"
libc = "0.2"
slog = { workspace = true }
slog-global = { workspace = true }
tikv_alloc = { workspace = true }
time = "0.1"