[package]
name = "tikv_util"
version = "0.1.0"
edition = "2021"

[features]
failpoints = ["fail/failpoints"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
bytes = "1.0"
collections ={ workspace = true }
error_code = { workspace = true }
fail = "0.5"
#grpcio = { workspace = true }
#kvproto = { workspace = true }
lazy_static = "1.3"
libc = "0.2"
rand = "0.8"
slog = { workspace = true }
slog-global = { workspace = true }
thiserror = "1.0"
tikv_alloc = { workspace = true }
time = "0.1"

[dev-dependencies]
#protobuf = "2"